projects/rawkode.cloud/gitops/teleport/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: teleport
  labels:
    app.kubernetes.io/name: teleport
