projects/rawkode.cloud/gitops/teleport/reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: gateway-to-teleport
  namespace: teleport
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: TLSRoute
      namespace: teleport
  to:
    - group: ""
      kind: Service
