projects/rawkode.cloud/gitops/teleport/tls-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: teleport
  namespace: teleport
spec:
  parentRefs:
    - name: rawkode-cloud
      namespace: gateway
      sectionName: teleport-passthrough
    - name: rawkode-cloud
      namespace: gateway
      sectionName: teleport-grpc-passthrough
  rules:
    - backendRefs:
        - name: teleport
          port: 443
